verified icon next to username

--- a/web/src/app/me/header/header.component.html
+++ b/web/src/app/me/header/header.component.html
@@ -10,13 +10,22 @@
   </div>
 </div>
 <div class="profile">
-  <a class="username" [routerLink]="'/user/' + username">&#64;{{ username }}</a>
+  <a class="username" [routerLink]="'/user/' + username">
+    {{ "@" + username }}
+    @if (emailVerified) {
+      <svg height="14px" viewBox="0 0 20.74 19.969">
+        <path
+          d="M19.97 7.82a4.6 4.6 0 0 1-.42-.84 4 4 0 0 1-.18-.93 4.2 4.2 0 0 0-.64-2.16 4.25 4.25 0 0 0-1.87-1.28 5 5 0 0 1-.85-.43 5 5 0 0 1-.64-.66 4.2 4.2 0 0 0-1.8-1.4 4.2 4.2 0 0 0-2.2.07 4.24 4.24 0 0 1-1.94 0A4.2 4.2 0 0 0 7.19.12a4.2 4.2 0 0 0-1.82 1.4 5 5 0 0 1-.66.66 5 5 0 0 1-.85.43 4.25 4.25 0 0 0-1.88 1.28 4.2 4.2 0 0 0-.61 2.16 4 4 0 0 1-.18.93 4.6 4.6 0 0 1-.42.82A4.3 4.3 0 0 0 0 9.98a4.3 4.3 0 0 0 .77 2.16 4 4 0 0 1 .42.82 4 4 0 0 1 .15.95 4.2 4.2 0 0 0 .64 2.16 4.25 4.25 0 0 0 1.87 1.28 5 5 0 0 1 .85.43 5 5 0 0 1 .66.66 4.1 4.1 0 0 0 1.8 1.4 3 3 0 0 0 .87.13 6.7 6.7 0 0 0 1.34-.18 4 4 0 0 1 1.94 0 4.33 4.33 0 0 0 2.24.06 4.1 4.1 0 0 0 1.8-1.4 5 5 0 0 1 .66-.66 5 5 0 0 1 .85-.43 4.25 4.25 0 0 0 1.87-1.28 4.2 4.2 0 0 0 .64-2.16 4 4 0 0 1 .15-.95 4.6 4.6 0 0 1 .42-.82 4.3 4.3 0 0 0 .8-2.17 4.3 4.3 0 0 0-.77-2.16m-4.89.87-5 5a1 1 0 0 1-1.42 0l-3-3a1.004 1.004 0 1 1 1.42-1.42l2.29 2.3 4.29-4.3a1.004 1.004 0 0 1 1.42 1.42"
+        />
+      </svg>
+    }
+  </a>
   <div class="fullname">{{ fullName }}</div>
   <div class="email">{{ email }}</div>
   <div class="bio">{{ bio }}</div>
   <div class="actions">
     @if (email && !emailVerified) {
-      <a routerLink="/me/verify">
+      <a routerLink="/me/verify" class="radiate" style="height: 20px">
         <svg width="20px" height="20px" viewBox="0 -960 960 960">
           <path
             d="m344-60-76-128-144-32 14-148-98-112 98-112-14-148 144-32 76-128 136 58 136-58 76 128 144 32-14 148 98 112-98 112 14 148-144 32-76 128-136-58-136 58Zm34-102 102-44 104 44 56-96 110-26-10-112 74-84-74-86 10-112-110-24-58-96-102 44-104-44-56 96-110 24 10 112-74 86 74 84-10 114 110 24 58 96Zm102-318Zm-42 142 226-226-56-58-170 170-86-84-56 56 142 142Z"
