--- a/web/src/app/me/verify/verify.component.html
+++ b/web/src/app/me/verify/verify.component.html
@@ -25,7 +25,7 @@
       }
     </button>
     @if (countdownSeconds) {
-      <span>{{ countdownSeconds }}s</span>
+      <small>{{ countdownSeconds }}s</small>
     }
   </div>
 </main>
