--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -4,6 +4,7 @@
   --primary: #08f;
   --primary-foreground: #fff;
   --error: #f22;
+  --info: #08f;
   font-family: "Open Sans", Helvetica, sans-serif;
 }
 
