--- a/web/src/app/comment/comment-card/comment-card.component.scss
+++ b/web/src/app/comment/comment-card/comment-card.component.scss
@@ -19,6 +19,10 @@
       text-decoration: none;
       padding: 8px;
       margin: -8px;
+      svg {
+        transform: translateY(2px);
+        fill: var(--info);
+      }
     }
     .created {
       font-size: 12px;
