--- a/web/src/app/me/verify/verify.component.scss
+++ b/web/src/app/me/verify/verify.component.scss
@@ -3,12 +3,16 @@
     max-width: 640px;
     padding: 16px;
     margin: 0 auto;
+    > * {
+      text-align: center;
+    }
     h1 {
-      margin: 32px 0;
+      margin: 0 0 32px;
     }
     div {
       margin: 48px 0 0;
       display: flex;
+      flex-direction: column;
       align-items: center;
       grid-gap: 16px;
     }
