--- a/web/src/components.scss
+++ b/web/src/components.scss
@@ -15,6 +15,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  grid-gap: 8px;
   white-space: nowrap;
   font-size: 16px;
   font-weight: bold;
@@ -41,6 +42,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  grid-gap: 4px;
   white-space: nowrap;
   line-height: 1;
   border-radius: 16px;
@@ -97,5 +99,50 @@
   color: var(--foreground);
   &:disabled {
     background: #8884;
+  }
+}
+
+.radiate {
+  position: relative;
+  &::before,
+  &::after {
+    pointer-events: none;
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    padding-bottom: 100%;
+    border-radius: 100%;
+    border: 1px solid #888;
+  }
+  &::before {
+    animation: radiate 4s infinite;
+  }
+  &::after {
+    animation: radiate 4s infinite 2s backwards;
+  }
+}
+
+@keyframes radiate {
+  0% {
+    opacity: 0;
+  }
+  10% {
+    transform: translate(-50%, -50%) scale(1.25);
+    border-width: 0.5px;
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.25;
+  }
+  90% {
+    transform: translate(-50%, -50%) scale(3);
+    border-width: 0.1px;
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
   }
 }
