comment: op username

--- a/web/src/app/post/post-card/post-card.component.scss
+++ b/web/src/app/post/post-card/post-card.component.scss
@@ -9,7 +9,7 @@
   margin: 12px auto;
   .header {
     display: flex;
-    grid-gap: 1ch;
+    grid-gap: 12px;
     align-items: baseline;
     .username {
       font-weight: bold;
