--- a/web/src/app/comment/comment-card/comment-card.component.html
+++ b/web/src/app/comment/comment-card/comment-card.component.html
@@ -10,6 +10,23 @@
     }
   </a>
   <span class="created" title="{{ created }}">{{ createdAgo }}</span>
+  @if (opUsername) {
+    <a class="replying" [routerLink]="'/post/' + postId">
+      <svg height="10px" viewBox="0 0 23.25 27.764">
+        <path
+          d="m23.25 9.001-9.287 8.933v-5.412c-2.813 0-9.973.062-9.973 7.426a7.98 7.98 0 0 0 6.369 7.816C4.517 26.972 0 22.017 0 15.958 0 4.702 12.026 4.606 13.963 4.606V0Z"
+        />
+      </svg>
+      {{ "@" + opUsername }}
+      @if (opVerified) {
+        <svg height="10px" viewBox="0 0 20.74 19.969">
+          <path
+            d="M19.97 7.82a4.6 4.6 0 0 1-.42-.84 4 4 0 0 1-.18-.93 4.2 4.2 0 0 0-.64-2.16 4.25 4.25 0 0 0-1.87-1.28 5 5 0 0 1-.85-.43 5 5 0 0 1-.64-.66 4.2 4.2 0 0 0-1.8-1.4 4.2 4.2 0 0 0-2.2.07 4.24 4.24 0 0 1-1.94 0A4.2 4.2 0 0 0 7.19.12a4.2 4.2 0 0 0-1.82 1.4 5 5 0 0 1-.66.66 5 5 0 0 1-.85.43 4.25 4.25 0 0 0-1.88 1.28 4.2 4.2 0 0 0-.61 2.16 4 4 0 0 1-.18.93 4.6 4.6 0 0 1-.42.82A4.3 4.3 0 0 0 0 9.98a4.3 4.3 0 0 0 .77 2.16 4 4 0 0 1 .42.82 4 4 0 0 1 .15.95 4.2 4.2 0 0 0 .64 2.16 4.25 4.25 0 0 0 1.87 1.28 5 5 0 0 1 .85.43 5 5 0 0 1 .66.66 4.1 4.1 0 0 0 1.8 1.4 3 3 0 0 0 .87.13 6.7 6.7 0 0 0 1.34-.18 4 4 0 0 1 1.94 0 4.33 4.33 0 0 0 2.24.06 4.1 4.1 0 0 0 1.8-1.4 5 5 0 0 1 .66-.66 5 5 0 0 1 .85-.43 4.25 4.25 0 0 0 1.87-1.28 4.2 4.2 0 0 0 .64-2.16 4 4 0 0 1 .15-.95 4.6 4.6 0 0 1 .42-.82 4.3 4.3 0 0 0 .8-2.17 4.3 4.3 0 0 0-.77-2.16m-4.89.87-5 5a1 1 0 0 1-1.42 0l-3-3a1.004 1.004 0 1 1 1.42-1.42l2.29 2.3 4.29-4.3a1.004 1.004 0 0 1 1.42 1.42"
+          />
+        </svg>
+      }
+    </a>
+  }
 </div>
 <div class="content">{{ content }}</div>
 <div class="stats">
