--- a/web/src/app/comment/comment-card/comment-card.component.scss
+++ b/web/src/app/comment/comment-card/comment-card.component.scss
@@ -10,15 +10,15 @@
   position: relative;
   .header {
     display: flex;
-    grid-gap: 1ch;
+    grid-gap: 12px;
     align-items: baseline;
     .username {
       font-weight: bold;
       font-size: 14px;
       color: inherit;
       text-decoration: none;
-      padding: 8px;
-      margin: -8px;
+      padding: 4px;
+      margin: -4px;
       svg {
         transform: translateY(2px);
         fill: var(--info);
@@ -26,6 +26,19 @@
     }
     .created {
       font-size: 12px;
+    }
+    .replying {
+      font-weight: 600;
+      font-size: 12px;
+      color: inherit;
+      text-decoration: none;
+      padding: 4px;
+      margin: -4px;
+      opacity: 0.5;
+      svg {
+        transform: translateY(1px);
+        fill: var(--foreground);
+      }
     }
   }
   .content {
