--- a/web/src/app/new/new.component.html
+++ b/web/src/app/new/new.component.html
@@ -1,6 +1,6 @@
 <app-new-header
   [loading]="loading"
-  [(preview)]="preview"
+  [preview]="preview"
   (postClickEvent)="createPost()"
   (previewClickEvent)="togglePreview()"
 />
