--- a/web/src/app/me/header/header.component.scss
+++ b/web/src/app/me/header/header.component.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 0 0 12px;
   .color {
     background: var(--primary);
     height: 120px;
@@ -22,7 +23,7 @@
   }
   .profile {
     min-height: 128px;
-    margin-top: -64px;
+    margin: -64px 0 0;
     background: var(--background);
     padding: 16px;
     border-radius: 16px;
