--- a/web/src/app/post/post-card/post-card.component.scss
+++ b/web/src/app/post/post-card/post-card.component.scss
@@ -7,6 +7,7 @@
   max-width: calc(100% - 32px);
   box-shadow: 0 0 8px #0004;
   margin: 12px auto;
+  position: relative;
   .header {
     display: flex;
     grid-gap: 12px;
@@ -53,6 +54,12 @@
         }
       }
     }
+  }
+  .delete {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    padding: 8px;
   }
   &.favorited button.favorites {
     color: var(--error);
